[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/order/knight.png" type="Texture" id=1]
[ext_resource path="res://order/knight/knight.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 3.77487

[sub_resource type="CircleShape2D" id=2]
radius = 50.0899

[sub_resource type="Animation" id=3]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.8, 0.8 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}

[node name="Knight" type="KinematicBody2D" groups=[
"knight",
"order",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="DetectionRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRange"]
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackAnimation" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 3 )

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
